# quay-service-tool

./: Dockerfile  openshift-rosa.yml  renovate.json
.github/workflows/: renovate-sync-quay-deps.yaml
backend/: pyproject.toml
conf/: generate_supervisord_conf.sh  supervisord.conf.example
frontend/: package-lock.json  package.json
scripts/: sync-quay-deps.sh
