[project]
name = ""
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "quay @ git+https://github.com/quay/quay.git@3f2fba1ab5f93d0b6bfeba93e437fabb68d97237",
    "markupsafe==2.1.3",
    "itsdangerous==2.1.2",
    "flask-restful==0.3.10",
    "flask-login==0.6.3",
    "python-keycloak>=4.0.0",
    "prometheus-client==0.13.1",
    "prometheus-flask-exporter==0.23.1",
    "text-unidecode==1.3",
    "psycopg2-binary>=2.9.10",
    "supervisor==4.3.0",
    "supervisor-logging==0.0.9",
    "supervisor-stdout @ git+https://github.com/quay/supervisor-stdout.git@9bdf630d0d1b4a16cf8b60b96adafb1ed98e7380",
    "pymysql==1.1.1",
    "resumablesha256==1.0",
    "deprecation==2.1.0",
    "opentelemetry-api==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-instrumentation-flask==0.53b1",
    "opentelemetry-instrumentation-psycopg2==0.53b1",
    "opentelemetry-exporter-otlp-proto-grpc==1.32.1",
    "opentelemetry-exporter-otlp-proto-http==1.32.1",
    "gunicorn>=23.0.0",
    "gevent>=24.0.0",
    "python-redis-lock>=4.0.0",
    "dumb-init>=1.2.5.post1",
]

[tool.uv]
package = false
default-groups = ["dev", "quay-upstream"]
override-dependencies = [
    "svglib==1.5.1", # this is needed otherwise Quay will try to install pycairo which doesn't work in Ubi
    "pyjwt>=2.12.0",
    "jwcrypto>=1.5.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
quay-upstream = [
    "akamai-edgeauth==0.3.2",
    "apscheduler==3.10.4",
    "aws-sam-translator==1.20.1",
    "azure-core==1.24.0",
    "azure-storage-blob==12.4.0",
    "babel==2.13.0",
    "chardet==5.2.0",
    "datetime==4.3",
    "debtcollector==1.22.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "elasticsearch-dsl==7.0.0",
    "flask-mail==0.9.1",
    "flask-principal==0.4.0",
    "furl==2.1.4",
    "isodate==0.6.1",
    "jsonpath-rw==1.4.0",
    "jsonpointer==2.4",
    "kafka-python==2.2.10",
    "msgpack==0.6.2",
    "msrest==0.7.1",
    "netifaces==0.11.0",
    "oauthlib==3.2.2",
    "orderedmultidict==1.0.1",
    "oslo-config==7.0.0",
    "oslo-i18n==6.2.0",
    "oslo-serialization==5.4.0",
    "oslo-utils==6.2.1",
    "ply==3.11",
    "psycopg2==2.9.9",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pygithub==2.1.1",
    "pynacl==1.5.0",
    "pyparsing==2.4.6",
    "python-editor==1.0.4",
    "python-gitlab==2.0.0",
    "python-keystoneclient==3.22.0",
    "python-ldap==3.4.3",
    "python-magic==0.4.27",
    "python-redis-lock==4.0.0",
    "python-swiftclient==4.4.0",
    "qrcode==8.2",
    "recaptcha2==0.1",
    "regex==2026.2.28",
    "requests-aws4auth==1.2.3",
    "requests-oauthlib==1.3.1",
    "rfc3986==1.3.2",
    "rsa==4.9.1",
    "semantic-version==2.10.0",
    "sentry-sdk[flask]==1.40.0",
    "splunk-sdk==2.1.0",
    "stringscore==0.1.0",
    "ua-parser==0.18.0",
    "webob==1.8.8",
    "websocket-client==1.7.0",
    "wheel==0.46.2",
]
